--- a/Setup/MainWindow.xaml
+++ b/Setup/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Setup"
         mc:Ignorable="d"
         xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-        Title="FMFuckIt Setup" Height="450" Width="800"
+        Title="FMFuckIt Setup" Height="400" Width="650" MinHeight="400" MinWidth="650"
         ExtendsContentIntoTitleBar="true"
         WindowBackdropType="Mica"
         WindowCornerPreference="Round"
@@ -25,9 +25,10 @@
             
             <StackPanel Grid.Row="0">
                 <StackPanel>
+                    <Label Content="Installationsassistent" FontSize="22" Foreground="White"/>
                     <Label Content="Für die Installation von FMAudit (ECI DCA) wird der Aktivierungstoken benötigt." />
                     <Label Content="Der Aktivierungstoken befindet sich in dem Dateinamen vom ECI DCA-Installations-Client." />
-                    <ui:TextBox Icon="Key24" PlaceholderText="audit.server.de!vertragsname! ab123456789c123456789d123456789e" Margin="0,10,0,0"/>
+                    <ui:TextBox x:Name="AuthTokenTb" TextChanged="AuthTokenTb_OnTextChanged" Icon="Key24" PlaceholderText="audit.server.de!vertragsname! ab123456789c123456789d123456789e" Margin="0,10,0,0"/>
                 </StackPanel>
                 <StackPanel Margin="0,10,0,0">
                     <CheckBox Content="Alte ECI DCA-Installation entfernen"/>
@@ -42,8 +43,11 @@
                         <ColumnDefinition Width="90"/>
                     </Grid.ColumnDefinitions>
 
-                    <ProgressBar Grid.Column="0" Margin="0,0,10,0"/>
-                    <Button Grid.Column="1" HorizontalAlignment="Right" Content="Installieren"/>
+                    <StackPanel Grid.Column="0" Margin="0,0,10,5">
+                        <Label x:Name="ActionLabel" Content="Idle"/>
+                        <ProgressBar x:Name="ProgrBar" />
+                    </StackPanel>
+                    <Button Grid.Column="1" HorizontalAlignment="Right" Click="InstallBtn_Click" x:Name="InstallBtn" Content="Installieren"/>
                 </Grid>
             </StackPanel>
         </Grid>
