--- a/Setup/MainWindow.xaml
+++ b/Setup/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:Setup"
         mc:Ignorable="d"
         xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-        Title="FMFuckIt Setup" Height="400" Width="650" MinHeight="400" MinWidth="650"
+        Title="FMWatchIt Setup" Height="400" Width="650" MinHeight="400" MinWidth="650"
         ExtendsContentIntoTitleBar="true"
         WindowBackdropType="Mica"
         WindowCornerPreference="Round"
@@ -31,8 +31,8 @@
                     <ui:TextBox x:Name="AuthTokenTb" TextChanged="AuthTokenTb_OnTextChanged" Icon="Key24" PlaceholderText="audit.server.de!vertragsname! ab123456789c123456789d123456789e" Margin="0,10,0,0"/>
                 </StackPanel>
                 <StackPanel Margin="0,10,0,0">
-                    <CheckBox Content="Alte ECI DCA-Installation entfernen"/>
-                    <CheckBox Content="Im Verbose-Modus installieren"/>
+                    <CheckBox IsChecked="true" x:Name="ConfigCB" Content="Standard Konfiguration laden"/>
+                    <CheckBox IsChecked="true" x:Name="VerboseCB" Content="Im Verbose-Modus installieren"/>
                 </StackPanel>
             </StackPanel>
 
@@ -52,6 +52,6 @@
             </StackPanel>
         </Grid>
 
-        <ui:TitleBar Title="FMFuckIt Setup" Grid.Row="0"/>
+        <ui:TitleBar Title="FMWatchIt Setup" Grid.Row="0"/>
     </Grid>
 </ui:UiWindow>
